    code 1 to continue treating that as a temporary failure.
  * setup-commands/setup-testbed: Remove ubuntu-core-launcher and
    snap-confine.
  * Fix some leftover "adt" → "autopkgtest" in manpages.
  * debian/tests/lxd: Move from adt-build-lxd to autopkgtest-build-lxd.
  * ssh-setup/nova: Use "autopkgtest*" instance name instead of "adt*".

 -- Martin Pitt <mpitt@debian.org>  Mon, 20 Jun 2016 08:51:31 +0200

autopkgtest (4.0.1) unstable; urgency=medium

  * Skip tests/autopkgtest NullRunner.test_apt_source_nonexisting test instead
    of failing if there are no deb-src apt sources configured on the host.
  * Add test for correctly parsing version number with less common characters.
  * autopkgtest: If the test argument is a legal apt source name, prefer
    testing that apt source name over testing that directory. If the latter
    is wanted, it can always be prefixed with ./ to disambiguate. Update the
    manpage accordingly.
  * autopkgtest.1: Update separator. (LP: #1591179)
  * Fix "apt-get source" version detection for source packages whose versions
    in different pockets have disjoint sets of binary packages (like Ubuntu's
    linux-raspi2).
  * ssh-setup/nova: If the normal "nova reboot" does not finish after five
    minutes, use the bigger "reboot --hard" hammer. This works around reboot
    bugs on some architectures.
  * Fix "apt-get source" version detection for old (Ubuntu precise) apts which
    does not yet understand --only-source, by ignoring other sources in awk.

 -- Martin Pitt <mpitt@debian.org>  Fri, 17 Jun 2016 12:08:55 +0300

autopkgtest (4.0) unstable; urgency=medium

  * Add new "autopkgtest" CLI. This provides a simplified CLI compared to the
    now deprecated adt-run:
    - It accepts only exactly one tested source package, and gives a proper
      error if none or more than one (often unintend) is given
    - It defaults to the current directory if that is a Debian source package