@@ -1934,7 +1934,7 @@ class DebTestsVirtFS(DebTestsAll):
         p = self.build_src('Tests: p1 p2\n'
                            'Depends: coreutils, aspell-doc [linux-any], apt-doc:native, unknown [nosucharch], bash-doc [!c64], bogus [!linux-any]\n'
                            'Restrictions: needs-root\n',
-                           {'p1': '#!/bin/sh -e\nif dpkg -s adt-satdep 2>/dev/null; then exit 1; fi; '
+                           {'p1': '#!/bin/sh -e\nif dpkg -s autopkgtest-satdep 2>/dev/null; then exit 1; fi; '
                             'apt-get --purge -y autoremove; '
                             'ls /usr/share/doc/aspell-doc/copyright;'
                             'echo I am fine\n',
@@ -2739,7 +2739,7 @@ class SchrootRunner(AdtTestCase, DebTestsVirtFS, DebTestsFailureModes):
                     self.assertIn('aspell-doc\t', contents)
                 else:
                     self.assertNotIn('aspell-doc\t', contents)
-                self.assertNotIn('adt-satdep', contents)
+                self.assertNotIn('autopkgtest-satdep', contents)
 
         # check binaries
         bins = os.listdir(os.path.join(outdir, 'binaries'))
